--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "lx-modal",
-  "private": true,
-  "version": "0.0.0",
-  "commonjs":"commonjs",
+  "author": "ruyan-lx",
+  "description": "一个基于vue3开发的函数式弹窗组件",
+  "private": false,
+  "version": "0.0.1",
+  "commonjs": "commonjs",
+  "main": "./src/components/index.ts",
+  "module": "./src/components/index.ts",
+  "types": "./src/components/index.d.ts",
+  "license": "MIT",
+  "keywords": [
+    "弹窗",
+    "vue3",
+    "vite",
+    "lx-modal",
+    "函数式组件"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "lx-modal": "^0.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
